syntax = "proto3";

package employee_service.requests.device.activate_device;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/device";

message ActivateDeviceRequest {
    int64 id = 1;
    string code = 2;
    string deviceName = 3;
    string deviceModel = 4;
    string deviceBrand = 5;
    string deviceSerialNumber = 6;
    string deviceOs = 7;
    double deviceRam = 8;
    double deviceStorage = 9;
    string deviceOsVersion = 10;
}

message ActivateDeviceResponse {
    string accessToken = 1;
    string refreshToken = 2;
    google.protobuf.Timestamp accessTokenExpiresAt = 3;
    google.protobuf.Timestamp refreshTokenExpiresAt = 4;
    repeated int64 actionIds = 5;
}